# NeuralNetworkDesign

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/activation_functions/: ActivationFunction.cpp  ActivationFunction.h  readme.md
src/basics/: Layer.cpp  MultiInputNeuron.cpp  readme.md
src/layer/: Layer.cpp  Layer.h  readme.md
src/network/: readme.md
src/network/hamming/: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/network/hamming/src/: CompetitiveLayer.cpp  CompetitiveLayer.h  FeedForwardLayer.cpp  FeedForwardLayer.h  Network.cpp  Network.h
src/neuron/: MultiInputNeuron.h  SingleInputNeuron.cpp  SingleInputNeuron.h  readme.md
